--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
+	"id": "obsidian-editable-markdown-plugin",
+	"name": "Editable Markdown Plugin",
+	"version": "0.0.1",
 	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
+	"description": "Editable markdown plugin.",
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md/about",
 	"isDesktopOnly": false
