--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "monkey-around": "^2.1.0"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
+    "jsmind": "^0.4.6",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
