--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^14.14.37",
     "jest": "^26.6.3",
     "obsidian": "^0.12.0",
+    "prettier": "2.2.1",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
