--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
     "jest": "^26.6.3",
     "obsidian": "^0.12.0",
     "prettier": "2.2.1",
