--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "obsidian": "^0.12.0",
     "prettier": "2.2.1",
     "rollup": "^2.32.1",
+    "simple-git-hooks": "^2.4.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx prettier --write ."
   }
 }
