--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
       - run: npm install
       - run: npm build
       - run: npm run build-browser
-      - run: npx eslint . --ext .js,.jsx,.ts,.tsx
+      - run: npx eslint . --ext .ts,.tsx
