--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "mindcheese",
   "version": "0.12.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "description": "Yet another mindmap library",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "browserDev": "rollup --config browser/rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
-    "build-browser": "rollup --config browser/rollup.config.js --environment BUILD:production",
+    "build": "rollup --config browser/rollup.config.js --environment BUILD:production",
     "test": "jest",
     "prettier": "prettier --write .",
     "eslint": "npx eslint . --ext .ts,.tsx"
@@ -16,7 +15,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "monkey-around": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -32,7 +30,6 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.25.0",
     "jest": "^26.6.3",
-    "obsidian": "^0.12.0",
     "prettier": "2.2.1",
     "rollup": "^2.32.1",
     "simple-git-hooks": "^2.4.1",
