--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.17.8",
     "@babel/preset-env": "7.16.11",
