--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "browserDev": "rollup --config browser/rollup.config.js -w",
+    "browserDev": "rollup --config browser/rollup.config.js -w --environment BUILD:development",
     "build": "rollup --config browser/rollup.config.js --environment BUILD:production",
     "test": "jest",
     "prettier": "prettier --write .",
@@ -14,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.17.8",
     "@babel/preset-env": "7.16.11",
@@ -31,6 +30,7 @@
     "jest": "27.5.1",
     "prettier": "2.6.0",
     "rollup": "2.70.1",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "simple-git-hooks": "2.7.0",
     "tslib": "2.3.1",
     "typescript": "4.6.2"
