--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Prettier/ESLint
+name: CI
 
 on:
   pull_request:
@@ -30,3 +30,4 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: npx eslint . --ext .ts,.tsx
+      - run: npx stylelint "**/*.css"
