--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "rollup": "2.70.1",
     "rollup-plugin-inject-process-env": "1.3.1",
     "simple-git-hooks": "2.7.0",
+    "stylelint": "^14.6.0",
+    "stylelint-config-standard": "^25.0.0",
     "tslib": "2.3.1",
     "typescript": "4.6.2"
   },
