--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "alwaysStrict": true,
+    "noImplicitThis": true,
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
