--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "baseUrl": ".",
     "alwaysStrict": true,
     "noImplicitThis": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "useUnknownInCatchVariables": true,
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
