--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mindcheese",
   "version": "0.12.0",
-  "description": "Yet another mindmap library",
+  "description": "Yet another editable mindmap library",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
