--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "rollup --config rollup.config.js -w",
     "browserDev": "rollup --config browser/rollup.config.js -w --environment BUILD:development",
     "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "buildDemo": "rollup --config browser/rollup.config.js --environment BUILD:production",
     "test": "jest",
     "prettier": "prettier --write .",
     "eslint": "npx eslint . --ext .ts,.tsx",
