--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -18,8 +18,9 @@ jobs:
           node-version: "14"
           check-latest: true
 
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build 🔧
         run: |
+          rm browser/.gitignore
           npm install
           npm run buildDemo
           perl -i -pe 's!../styles.css!styles.css!' browser/index.html
