--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,6 +3,7 @@ name: Publish Package to npmjs
 on:
   release:
     types: [created]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +22,10 @@ jobs:
       - run: npm ci
       - name: Set version from tag
         run: npm --no-git-tag-version version ${GITHUB_REF#refs/*/}
+      - name: Generate d.ts
+        run: tsc
+      - run: git commit -a -m 'commit version'
+      - run: git push
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
