--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "declarationDir": "dist/types",
+    "declarationDir": "types",
     "emitDeclarationOnly": true,
     "lib": ["dom", "es5", "scripthost", "es2015"]
   },
