--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set version from tag
         run: npm --no-git-tag-version version ${GITHUB_REF#refs/*/}
       - name: Generate d.ts
-        run: tsc
+        run: npx tsc
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
