--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "mindcheese",
   "version": "0.14.0",
   "description": "Yet another editable mindmap library",
-  "main": "dist/mindcheese.cjs.js",
-  "types": "types/src/mindmap/MindCheese.d.ts",
-  "browser": "dist/mindcheese.js",
+  "main": "dist/mindcheese.es.js",
+  "types": "dist/src/mindmap/MindCheese.d.ts",
+  "browser": "dist/mindcheese.es.js",
   "scripts": {
-    "dev": "rollup --config rollup.config.js -w",
-    "browserDev": "rollup --config browser/rollup.config.js -w --environment BUILD:development",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
-    "buildDemo": "rollup --config browser/rollup.config.js --environment BUILD:production",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "test": "jest",
     "prettier": "prettier --write .",
     "eslint": "npx eslint . --ext .ts,.tsx",
@@ -19,12 +18,6 @@
   "author": "tokuhirom",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.24.4",
-    "@babel/preset-env": "7.24.4",
-    "@babel/preset-typescript": "7.24.1",
-    "@rollup/plugin-commonjs": "25.0.7",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-typescript": "11.1.6",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.4",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -33,13 +26,13 @@
     "eslint": "8.57.0",
     "jest": "29.7.0",
     "prettier": "3.2.5",
-    "rollup": "2.79.1",
-    "rollup-plugin-inject-process-env": "1.3.1",
     "simple-git-hooks": "2.11.1",
     "stylelint": "16.3.1",
     "stylelint-config-standard": "36.0.0",
     "tslib": "2.6.2",
-    "typescript": "5.4.3"
+    "typescript": "5.4.3",
+    "vite": "^5.2.8",
+    "vite-plugin-dts": "^3.8.1"
   },
   "simple-git-hooks": {
     "pre-commit": "npx prettier --write ."
