--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:demo": "vite build --config vite.config.demo.js",
     "serve": "vite preview",
     "test": "jest",
     "prettier": "prettier --write .",
