--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vite build",
     "build:demo": "vite build --config vite.config.demo.js",
     "serve": "vite preview",
-    "test": "jest",
+    "test": "vitest",
     "prettier": "prettier --write .",
     "eslint": "npx eslint . --ext .ts,.tsx",
     "stylelint": "npx stylelint \"**/*.css\""
@@ -19,13 +19,11 @@
   "author": "tokuhirom",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "29.5.12",
     "@types/node": "20.12.4",
     "@typescript-eslint/eslint-plugin": "7.5.0",
     "@typescript-eslint/parser": "7.5.0",
     "babel-jest": "29.7.0",
     "eslint": "8.57.0",
-    "jest": "29.7.0",
     "prettier": "3.2.5",
     "simple-git-hooks": "2.11.1",
     "stylelint": "16.3.1",
@@ -33,7 +31,8 @@
     "tslib": "2.6.2",
     "typescript": "5.4.3",
     "vite": "^5.2.8",
-    "vite-plugin-dts": "^3.8.1"
+    "vite-plugin-dts": "^3.8.1",
+    "vitest": "^1.4.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx prettier --write ."
