--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm install
-          npm run build
+          npm run build:demo
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
