--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,9 +4,16 @@
     "selector-type-no-unknown": [
       true,
       {
-        "ignoreTypes": ["mcnode", "mcnodes", "mcadder"]
+        "ignoreTypes": [
+          "mcnode",
+          "mcnodes",
+          "mcadder"
+        ]
       }
     ]
   },
-  "ignoreFiles": ["node_modules/**/*"]
+  "ignoreFiles": [
+    "node_modules/**/*",
+    "dist/**/*"
+  ]
 }
