--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
   "author": "tokuhirom",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "20.16.1",
     "@typescript-eslint/eslint-plugin": "8.2.0",
     "@typescript-eslint/parser": "8.2.0",
-    "eslint": "9.9.0",
+    "eslint": "^9.9.0",
     "prettier": "3.3.3",
     "simple-git-hooks": "2.11.1",
     "stylelint": "16.8.2",
     "stylelint-config-standard": "36.0.1",
     "tslib": "2.6.3",
-    "typescript": "5.5.4",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0",
     "vite": "^5.2.8",
     "vite-plugin-dts": "^4.0.0",
     "vitest": "^2.0.0"
