--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "vite-plugin-dts": "^4.0.0",
     "vitest": "^2.0.0"
   },
+   "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "simple-git-hooks": {
     "pre-commit": "npx prettier --write ."
   },
