--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,5 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run test
-      - run: npx eslint . --ext .ts,.tsx
+      - run: npx eslint .
       - run: npm run stylelint
